<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">


    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.yos.newsapp.ui.BBC.GalleryFragment"
        android:label="@string/BBC"
        tools:layout="@layout/fragment_gallery" />
    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.yos.newsapp.ui.ZEE.SlideshowFragment"
        android:label="@string/ZeeNews"
        tools:layout="@layout/fragment_slideshow" />
    <fragment
        android:id="@+id/nav_home"
        android:name="com.yos.newsapp.ui.CNBC.HomeFragment"
        android:label="@string/CNBC"
        tools:layout="@layout/fragment_home" />
    <fragment
        android:id="@+id/foxnewsFragment"
        android:name="com.yos.newsapp.Fragments.foxnewsFragment"
        android:label="@string/FOX"
        tools:layout="@layout/fragment_foxnews" />

    <fragment
        android:id="@+id/aajtkFragment"
        android:name="com.yos.newsapp.Fragments.aajtkFragment"
        android:label="@string/aajtak"
        tools:layout="@layout/fragment_aajtk" />

</navigation>